tests/tooling/fixtures/native/recovery/negative/negative_objc_literal_aliases_parser_missing_rhs.objc3
// Expected diagnostic code(s): O3P103.
module NegativeObjcLiteralAliasesParserMissingRhs;

let value = YES + NO + NULL + ;

fn main() -> i32 {
  return 0;
}
